<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Task Category-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_gravity="center_vertical"
                    android:text="@string/category_task" />

                <EditText
                    android:id="@+id/edit_task_name"
                    style="@style/EditorFieldStyle"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:hint="@string/hint_add_task"
                    android:inputType="textCapSentences"
                    />

            </LinearLayout>

            <!--Due date Category-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_due_date" />

                <EditText
                    android:id="@+id/edit_due_date"
                    style="@style/EditorFieldStyle"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:hint="@string/hint_add_due_date"
                    android:inputType="textCapSentences" />

            </LinearLayout>


            <!--Status Category-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:layout_gravity="center_vertical"
                    android:text="@string/category_priority" />


                <!-- Gender drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingRight="8dp"
                    android:spinnerMode="dropdown" />


            </LinearLayout>

            <!--Priority Category-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_gravity="center_vertical"
                    android:text="@string/category_status" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_in_progress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_in_progress" />

                        <RadioButton
                            android:id="@+id/radio_completed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/button_completed" />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <!-- Notes category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/category_notes" />


                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_text_background"
                    android:gravity="top|left"
                    android:inputType="textMultiLine|textCapSentences"
                    android:lines="8"
                    android:padding="8dp"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical" />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
